Fix alignment on archive pages

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -57,6 +57,7 @@
 }
 
 .page-title,
+.archive-description,
 .entry-header,
 .entry-footer,
 .site-info,
@@ -74,6 +75,7 @@
 	.entry-content > *,
 	.entry-summary > *,
 	.page-title,
+	.archive-description,
 	.entry-header,
 	.entry-footer,
 	.site-info,
